Add Kubernetes deployment presentation and update configurations
- Introduced a new presentation document detailing the Kubernetes deployment process, including CI/CD, manifest explanations, and security best practices.
- Updated Dockerfiles for frontend to include Nginx configuration.
- Modified Kubernetes deployment files to use images from GitHub Container Registry and set image pull policies to 'Always'.
- Updated backend secrets with new base64-encoded values for JWT configurations.

--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: backend
-        image: auth-api-backend:latest
+        image: ghcr.io/micheal-ndoh/auth-kubernetees-backend:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
         env:
