--- a/k8s/backend-secret.yaml
+++ b/k8s/backend-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: backend-secret
 type: Opaque
 data:
-  JWT_SALT: ry533h242g24r53y
-  JWT_SECRET: ry533h242g24r53yuy
+  JWT_SALT: cnk1MzNoMjQyZzI0cjUzeQ==
+  JWT_SECRET: cnk1MzNoMjQyZzI0cjUzeXV5
