--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: auth-api-frontend:latest
-        imagePullPolicy: IfNotPresent
+        image: ghcr.io/micheal-ndoh/auth-kubernetees-frontend:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
         envFrom:
