Update backend deployment and secret configurations for consistency

--- a/k8s/backend-secret.yaml
+++ b/k8s/backend-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: backend-secret
 type: Opaque
 data:
-  JWT_SALT: cnk1MzNoMjQyZzI0cjUzeQ==
+  JWT_SALT: cnk1MzNoMjQyeQ==
   JWT_SECRET: cnk1MzNoMjQyZzI0cjUzeXV5
