--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -12,6 +12,8 @@ spec:
       labels:
         app: backend
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
       - name: backend
         image: ghcr.io/micheal-ndoh/auth-kubernetees-backend:latest
