Refactor backend-secret.yaml to use stringData for JWT_SALT and JWT_SECRET

--- a/k8s/backend-secret.yaml
+++ b/k8s/backend-secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: backend-secret
 type: Opaque
-data:
-  JWT_SALT: 73oALUqSJK684rolTomuepriH1BkW1FnJQscro+17BQ=
-  JWT_SECRET: cnk1MzNoMjQyZzI0cjUzeXV5
+stringData:
+  JWT_SALT: croVFDI2Wgqlo1zKgrZFMQ==
+  JWT_SECRET: UeX4p93RmV5nA8qzKLt1xNcZq2WbfHz9
